--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -1,5 +1,5 @@
 .contact {
-    background-color: #000000;
+    background-color: #fff;
 
     .contact_wrapper {
         text-align: center;
@@ -17,12 +17,12 @@
         .contact_form {
             background-color: rgba(225,225,225,.7);
 
-            .contact_input {
+            // .contact_input {
 
-                input {
+            //     input {
 
-                }
-            }
+            //     }
+            // }
 
         }
     }
