--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,10 +1,26 @@
 .header {
-    background-color: #121216;
+    background-color: #FFFFFF;
     display: flex;
     justify-content: space-between;
     align-items: center;
 
     padding: 20px 80px;
+
+    .burger {
+        display: none;
+    }
+
+    .logo {
+        a {
+            display: flex;
+            align-items: center;
+
+            h1 {
+                padding-left: 10px;
+                font-weight: 600;
+            }
+        }
+    }
 
     .profile {
         .language_button {
@@ -23,19 +39,12 @@
             width: 50px;
             height: 50px;
             margin-left: 20px;
-            img {
-                text-align: center;
-                width: 30px;
-                transition: opacity ease-in .3s;
-                opacity: 1;
 
-
-                &:hover {
-                    transition: opacity ease-in .2s;    
-                    opacity: .3;
+            &:hover {
+                transition: opacity ease-in .2s;    
+                opacity: .3;
+                
                     
-                    
-                }
             }
         }
     }
@@ -43,16 +52,58 @@
         display: flex;
         gap: 40px;
 
-        a {
-            transition: opacity ease-in .3s;
-            opacity: 1;
+        .login {
+            color: rgba(207, 111, 73, .7);
 
             &:hover {
-                transition: opacity ease-in .2s;
-                opacity: .3;
+                transition: color ease-in .2s;
+                color: rgba(207, 111, 73, 1);
+            }
+        }
+
+        a {
+            transition: color ease-in .3s;
+            color: rgb(0, 0, 0);
+
+            &:hover {
+                transition: color ease-in .2s;
+                color: rgba(0, 0, 0, 0.7);
             }
         }
 
     }
 
+}
+
+@media (max-width: 1200px) {
+    .header {
+        .burger {
+            display: flex;
+            z-index: 2;
+        }
+        .menu {
+            display: none;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            background-color: #000000;
+            position: absolute;
+            top: 0;
+            right: 0;
+            height: 100vh;
+            width: 100vw;
+            z-index: 1;
+            transition: display 3s ease-in-out;
+
+            .menu-link {
+                color: #FFFFFF;
+            }
+
+            &.open {
+                display: flex;
+                background-color: #ff0000;
+              }
+
+        }
+    }
 }
