--- a/src/components/Items/Items.scss
+++ b/src/components/Items/Items.scss
@@ -1,29 +1,91 @@
 .items {
-  background-color: #121216;
+  background-color: #F5F5F2;
   padding-bottom: 2em;
 
   .items_title {
     text-align: center;
+
+    padding: 20px;
+
     h1 {
-      font-size: 4em;
+      font-size: 48px;
+      font-weight: 700;
+      line-height: 58px;
+      letter-spacing: 1.5px;
     }
   }
+
   .items_wrapper {
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
+    padding: 40px;
 
     .items_block {
-      background-color: #cccccc;
-      border-radius: 15px;
-      padding: 20px;
-      margin: 20px 0;
+      background-color: rgb(255, 255, 255);
+      border-radius: 5px;
+      box-shadow: 1px 1px 2px #000000;
+      transition: box-shadow ease-in .2s;  
+      margin-bottom: 80px;
+
+      width: 405px;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      text-align: left;
 
       &:hover {
-        background-color: #0000ff;
-
+        transition: box-shadow ease-in .2s;  
+        box-shadow: 0px 4px 22px #000000;
+      }
+      h1 {
+        font-size: 24px;
+        font-weight: 700;
+        line-height: 30px;
       }
 
+      h2 {
+        padding-top: 5px;
+        font-size: 18px;
+        font-weight: 700;
+        line-height: 27px;
+      }
+
+      h3 {
+        padding-top: 15px;
+      }
+
+      .block_title {
+        padding: 24px 24px;
+
+        .block_address {
+          display: flex;
+          gap: .5vh;
+
+          img {
+            transform: translate(-50%, 20%);
+          }
+        }
+
+        .block_info {
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+
+          .block_room,
+          .block_square,
+          .block_stairs {
+            display: flex;
+            align-items: center;
+            gap: .5vh;
+
+            img {
+              transform: translate(-50%, 50%);
+              height: 15px;
+              width: 15px;
+            }
+          }
+        }
+      }
     }
   }
 }
