--- a/src/components/Title/Title.scss
+++ b/src/components/Title/Title.scss
@@ -1,29 +1,26 @@
 .title {
-  background-image: url("../assets/image/title.jpg");
-  background-color: rgba(51, 51, 51, 0.9);
-  background-size: cover;
-  background-position: 50%;
-  background-repeat: no-repeat;
-  background-blend-mode: overlay;
-
-  h1 {
-    color: white;
-  }
+  background-color: #F5F5F2;
 
   .title_wrapper {
     display: flex;
-    min-height: calc(100vh - 0px);
-    
-    .title_text {
-        margin: auto 0;
-        text-align: left;
-        max-width: 600px;
+    justify-content: space-between;
+    align-items: center;
 
-        h1 {
-            font-size: 48px;
-            font-weight: 700;
-        }
+    .title_main {
+      width: 50%;
+      margin: 0 auto;
+      
+      h1 {
+        font-size: 56px;
+        line-height: 68px;
+      }
+  
+      p {
+        font-size: 20px;
+        line-height: 30px;
+        color: #65665C;
+      }
     }
-
   }
+
 }
