--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -17,9 +17,9 @@ time, mark, audio, video {
 	padding: 0;
 	border: 0;
 	text-decoration: none;
-	color: rgb(255, 255, 255);
+	color: rgb(0, 0, 0);
 	font-size: 100%;
-	font-family: 'Montserrat', sans-serif;
+	font-family: 'Roboto', sans-serif;
 	font-weight: 400;
 	vertical-align: baseline;
 
@@ -50,7 +50,7 @@ table {
 }
 
 .container {
-	max-width: 1200px;
+	max-width: 1280px;
 	margin: 0 auto;
     padding: 0 15px;
 }
